Fix design on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,17 +91,18 @@ img {
   display: none;
 }
 
-main {
-  width: 80vw;
-  height: 100vh;
+#home {
+  max-width: 80vw;
+  min-height: 100vh;
   margin: auto;
   text-align: center;
   font-size: 1.5em;
+  padding: 83.20px 0;
+  display: flex;
+  align-items: center;
 }
 
 #info-content {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
